--- a/index.html
+++ b/index.html
@@ -11,26 +11,20 @@
         <h1>Dasmoto Arts & Crafts</h1>
     </header>
     <main>
-        <div id="brushes">
-            <h2 class="title">Brushes</h2>
-        </div>
         <section>
+            <h2 class="title brushes">Brushes</h2>
             <img src="./resources/images/hacksaw.jpeg" alt="Hacksaw Brushes">
             <h3>Hacksaw Brushes</h3>
             <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span class="cost">Starting at $3.00 / brush.</span></p>
         </section>
-        <div id="frames">
-            <h2 class="title">Frames</h2>
-        </div>
         <section>
+            <h2 class="title frames">Frames</h2>
             <img src="./resources/images/frames.jpeg" alt="Hacksaw Brushes">
             <h3>Art Frames (assorted)</h3>
             <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="cost">Starting at $2.00 / frame.</span></p>
         </section>
-        <div id="paint">
-            <h2 class="title">Paint</h2>
-        </div>
         <section>
+            <h2 class="title paint">Paint</h2>
             <img src="./resources/images/finnish.jpeg" alt="Hacksaw Brushes">
             <h3>Clean Finnish Paint</h3>
             <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class="cost"> Starting at $5.00 / tube.</span></p>
